--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!doctype html>
+<html lang="en">
 <html>
 <head>
-  <title>webpack/ES6 setup</title>
+  <title>DaftCode-recruitment-task</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css?family=Raleway:200,600" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <link rel="stylesheet" href="css/app.css" />
+  <script src="js/app.js"></script>
 </head>
 <body>
-  <div id="app"></div>
-  <script src="js/app.js"></script>
+  <div class="container">
+    <header class="main-header">
+
+    </header>
+  </div>
 </body>
 </html>
