--- a/index.html
+++ b/index.html
@@ -11,9 +11,68 @@
 </head>
 <body>
   <div class="container">
-    <header class="main-header">
 
+    <!--Header-->
+
+    <header class="main-header">
+      <h1 class = "header">
+        <a href="">
+          <img class = "main-logo" src="./images/svg-files/logo_awesome.svg" alt="logo-awesome">
+        </a>
+      </h1>
+
+      <!--Main-nav-->
+
+      <nav class="main-nav">
+        <button class="burger-button" aria-haspopup="true" aria-expanded="false"><img src="./images/svg-files/hamburger_menu.svg" alt=""></button>
+        <ul class="nav-list">
+          <li class="nav-element"><a class="nav-link" href="">features</a></li>
+          <li class="nav-element"><a class="nav-link" href="">case studies</a></li>
+          <li class="nav-element"><a class="nav-link" href="">about</a></li>
+          <li><button class="contact-button">contact</button></li>
+        </ul>
+      </nav>
     </header>
+
+    <!--Main content-->
+
+    <div class="main-content">
+      <p class="content-main-text">
+        Not to make you feel dizzy but <br/> the challenge is worth it. Aim high,<br/> have fun, <span>be awesome.</span>
+      </p>
+      <div class="image-wrapper">
+        <img src="./images/svg-files/kolko_kwadrat.svg" alt="kolo-kwadrat">
+      </div>
+      <p class="content-main-sub-text">Look carefully and notice every detail, nothing tricky though.</p>
+
+      <!--icons links-->
+
+      <ul class="contact-list">
+        <li class="contact-element">
+          <a class="contact-element-link" href="">
+            <img class="contact-element-icon" src="./images/svg-files/fb.svg" alt="facebook">
+            <span class="contact-element-text">/ awesome</span>
+          </a>
+        </li>
+        <li class="contact-element">
+          <a class="contact-element-link" href="">
+            <img class="contact-element-icon" src="./images/svg-files/twitter.svg" alt="twitter">
+            <span class="contact-element-text">/ awesome</span>
+          </a>
+        </li>
+        <li class="contact-element">
+          <a class="contact-element-link" href="">
+            <img class="contact-element-icon" src="./images/svg-files/google+.svg" alt="google+">
+            <span class="contact-element-text">/ awesome</span>
+          </a>
+        </li>
+      </ul>
+    </div>
+
+    <button class="bottom-button">
+      <span class="bottom-button-text">more</span>
+    </button>
+
   </div>
 </body>
 </html>
