mobile without menu

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <!--Header-->
 
     <header class="main-header">
+      <img class = "test-image" src="./images/320x530.png" alt="png">
       <h1 class = "header">
         <a href="">
           <img class = "main-logo" src="./images/svg-files/logo_awesome.svg" alt="logo-awesome">
@@ -24,7 +25,7 @@
       <!--Main-nav-->
 
       <nav class="main-nav">
-        <button class="burger-button" aria-haspopup="true" aria-expanded="false"><img src="./images/svg-files/hamburger_menu.svg" alt=""></button>
+        <button class="burger-button" aria-haspopup="true" aria-expanded="false"><img class="burger-button-img" src="./images/svg-files/hamburger_menu.svg" alt=""></button>
         <ul class="nav-list">
           <li class="nav-element"><a class="nav-link" href="">features</a></li>
           <li class="nav-element"><a class="nav-link" href="">case studies</a></li>
@@ -36,41 +37,42 @@
 
     <!--Main content-->
 
-    <div class="main-content">
+    <section class="main-content">
       <p class="content-main-text">
-        Not to make you feel dizzy but <br/> the challenge is worth it. Aim high,<br/> have fun, <span>be awesome.</span>
+        Not to make you feel dizzy but the challenge is worth it. Aim high,<br class="line-break"> have fun, <span>be awesome.</span>
       </p>
       <div class="image-wrapper">
         <img src="./images/svg-files/kolko_kwadrat.svg" alt="kolo-kwadrat">
       </div>
-      <p class="content-main-sub-text">Look carefully and notice every detail, nothing tricky though.</p>
+      <p class="content-main-sub-text">Look carefully and notice every detail<br class="line-break"> nothing tricky though.</p>
 
       <!--icons links-->
 
       <ul class="contact-list">
         <li class="contact-element">
           <a class="contact-element-link" href="">
-            <img class="contact-element-icon" src="./images/svg-files/fb.svg" alt="facebook">
-            <span class="contact-element-text">/ awesome</span>
+            <img class="contact-element-icon" src="./images/svg-files/facebook.svg" alt="facebook">
+            <span class="contact-element-text">/ &nbsp;awesome</span>
           </a>
         </li>
         <li class="contact-element">
           <a class="contact-element-link" href="">
             <img class="contact-element-icon" src="./images/svg-files/twitter.svg" alt="twitter">
-            <span class="contact-element-text">/ awesome</span>
+            <span class="contact-element-text">/ &nbsp;awesome</span>
           </a>
         </li>
         <li class="contact-element">
           <a class="contact-element-link" href="">
-            <img class="contact-element-icon" src="./images/svg-files/google+.svg" alt="google+">
-            <span class="contact-element-text">/ awesome</span>
+            <img class="contact-element-icon" src="./images/svg-files/google-plus.svg" alt="google+">
+            <span class="contact-element-text">/ &nbsp;awesome</span>
           </a>
         </li>
       </ul>
-    </div>
+    </section>
 
     <button class="bottom-button">
       <span class="bottom-button-text">more</span>
+      <span class="bottom-button-text-2">+</span>
     </button>
 
   </div>
