minor changes in layout/added and positioned backgournd image

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!--Header-->
 
     <header class="main-header">
-      <img class = "test-image" src="./images/320x530.png" alt="png">
+      <!--<img class = "test-image" src="./images/1440x900.png" alt="png">-->
       <h1 class = "header">
         <a href="">
           <img class = "main-logo" src="./images/svg-files/logo_awesome.svg" alt="logo-awesome">
@@ -39,12 +39,12 @@
 
     <section class="main-content">
       <p class="content-main-text">
-        Not to make you feel dizzy but the challenge is worth it. Aim high,<br class="line-break"> have fun, <span>be awesome.</span>
+        Not to make you feel<br class="line-break">  dizzy but the challenge is worth it. Aim high,<br class="line-break"> have fun, <span>be awesome.</span>
       </p>
       <div class="image-wrapper">
         <img src="./images/svg-files/kolko_kwadrat.svg" alt="kolo-kwadrat">
       </div>
-      <p class="content-main-sub-text">Look carefully and notice every detail<br class="line-break"> nothing tricky though.</p>
+      <p class="content-main-sub-text">Look carefully and notice every detail,<br class="line-break"> nothing tricky though.</p>
 
       <!--icons links-->
 
@@ -63,7 +63,7 @@
         </li>
         <li class="contact-element">
           <a class="contact-element-link" href="">
-            <img class="contact-element-icon" src="./images/svg-files/google-plus.svg" alt="google+">
+            <img class="contact-element-icon-google" src="./images/svg-files/google-plus.svg" alt="google+">
             <span class="contact-element-text">/ &nbsp;awesome</span>
           </a>
         </li>
