mobile responsive done

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <!--Header-->
 
     <header class="main-header">
-      <!--<img class = "test-image" src="./images/1440x900.png" alt="png">-->
       <h1 class = "header">
         <a href="">
           <img class = "main-logo" src="./images/svg-files/logo_awesome.svg" alt="logo-awesome">
@@ -38,12 +37,10 @@
     <!--Main content-->
 
     <section class="main-content">
-      <p class="content-main-text">
+      <h2 class="content-main-text">
         Not to make you feel<br class="line-break">  dizzy but the challenge is worth it. Aim high,<br class="line-break"> have fun, <span>be awesome.</span>
-      </p>
-      <div class="image-wrapper">
-        <img src="./images/svg-files/kolko_kwadrat.svg" alt="kolo-kwadrat">
-      </div>
+      </h2>
+      <img class = "circle-square-image" src="./images/png-files/kolko_kwadrat.png" alt="kolko-kwadrat">
       <p class="content-main-sub-text">Look carefully and notice every detail,<br class="line-break"> nothing tricky though.</p>
 
       <!--icons links-->
@@ -51,29 +48,37 @@
       <ul class="contact-list">
         <li class="contact-element">
           <a class="contact-element-link" href="">
-            <img class="contact-element-icon" src="./images/svg-files/facebook.svg" alt="facebook">
+            <div class="contact-element-icon">
+              <img src="./images/svg-files/facebook.svg" alt="facebook">
+            </div>
             <span class="contact-element-text">/ &nbsp;awesome</span>
           </a>
         </li>
         <li class="contact-element">
           <a class="contact-element-link" href="">
-            <img class="contact-element-icon" src="./images/svg-files/twitter.svg" alt="twitter">
+            <div class="contact-element-icon">
+              <img src="./images/svg-files/twitter.svg" alt="twitter">
+            </div>
             <span class="contact-element-text">/ &nbsp;awesome</span>
           </a>
         </li>
         <li class="contact-element">
           <a class="contact-element-link" href="">
-            <img class="contact-element-icon-google" src="./images/svg-files/google-plus.svg" alt="google+">
+            <div class="contact-element-icon-google" >
+              <img src="./images/svg-files/google-plus.svg" alt="google+">
+            </div>
             <span class="contact-element-text">/ &nbsp;awesome</span>
           </a>
         </li>
       </ul>
     </section>
 
-    <button class="bottom-button">
-      <span class="bottom-button-text">more</span>
-      <span class="bottom-button-text-2">+</span>
-    </button>
+    <!-- bottom Arrow-->
+
+    <a class="bottom-nav-link" href ="">
+      <span class="bottom-nav-link-text">more</span>
+      <span class="bottom-nav-link-text-2">+</span>
+    </a>
 
   </div>
 </body>
