ready RWD mobile version

--- a/index.html
+++ b/index.html
@@ -24,12 +24,29 @@
       <!--Main-nav-->
 
       <nav class="main-nav">
-        <button class="burger-button" aria-haspopup="true" aria-expanded="false"><img class="burger-button-img" src="./images/svg-files/hamburger_menu.svg" alt=""></button>
+        <button class="burger-button" aria-haspopup="true" aria-expanded="false"><img class="burger-button-img" src="./images/svg-files/hamburger_menu.svg" alt="menu-burger"></button>
         <ul class="nav-list">
           <li class="nav-element"><a class="nav-link" href="">features</a></li>
           <li class="nav-element"><a class="nav-link" href="">case studies</a></li>
           <li class="nav-element"><a class="nav-link" href="">about</a></li>
           <li><button class="contact-button">contact</button></li>
+        </ul>
+        <ul class="nav-list-icons">
+          <li class="nav-icon">
+            <a href="">
+              <img src="./images/svg-files/facebook.svg" alt="facebook">
+            </a>
+          </li>
+          <li class="nav-icon">
+            <a href="">
+              <img src="./images/svg-files/twitter.svg" alt="facebook">
+            </a>
+          </li>
+          <li class="nav-icon">
+            <a href="">
+              <img src="./images/svg-files/google-plus.svg" alt="facebook">
+            </a>
+          </li>
         </ul>
       </nav>
     </header>
