changes in mobile and desktop RWD/fixed margin and font units

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <section class="main-content">
       <h2 class="content-main-text">
-        Not to make you feel<br class="line-break">  dizzy but the challenge is worth it. Aim high,<br class="line-break"> have fun, <span>be awesome.</span>
+        Not to make you feel<br class="line-break">  dizzy but<br class="line-break-desktop"> the challenge is worth it. Aim high,<br> have fun, <span>be awesome.</span>
       </h2>
       <img class = "circle-square-image" src="./images/png-files/kolko_kwadrat.png" alt="kolko-kwadrat">
       <p class="content-main-sub-text">Look carefully and notice every detail,<br class="line-break"> nothing tricky though.</p>
