finished tablet RWD and added changes in mobile and desktop

--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
       <!--Main-nav-->
 
       <nav class="main-nav">
-        <button class="burger-button" aria-haspopup="true" aria-expanded="false"><img class="burger-button-img" src="./images/svg-files/hamburger_menu.svg" alt="menu-burger"></button>
+        <button class="burger-button" aria-haspopup="true" aria-expanded="false">
+          <img class="burger-img" src="./images/svg-files/hamburger_menu.svg" alt="menu-burger">
+          <img class="x-img" src="./images/svg-files/iks.svg" alt="x-button">
+        </button>
         <ul class="nav-list">
           <li class="nav-element"><a class="nav-link" href="">features</a></li>
           <li class="nav-element"><a class="nav-link" href="">case studies</a></li>
