final commit of the project

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <header class="main-header">
       <h1 class = "header">
-        <a href="">
+        <a href="#">
           <img class = "main-logo" src="./images/svg-files/logo_awesome.svg" alt="logo-awesome">
         </a>
       </h1>
@@ -29,9 +29,9 @@
           <img class="x-img" src="./images/svg-files/iks.svg" alt="x-button">
         </button>
         <ul class="nav-list">
-          <li class="nav-element"><a class="nav-link" href="">features</a></li>
-          <li class="nav-element"><a class="nav-link" href="">case studies</a></li>
-          <li class="nav-element"><a class="nav-link" href="">about</a></li>
+          <li class="nav-element"><a class="nav-link" href="#">features</a></li>
+          <li class="nav-element"><a class="nav-link" href="#">case studies</a></li>
+          <li class="nav-element"><a class="nav-link" href="#">about</a></li>
           <li><button class="contact-button">contact</button></li>
         </ul>
         <ul class="nav-list-icons">
@@ -68,25 +68,19 @@
       <ul class="contact-list">
         <li class="contact-element">
           <a class="contact-element-link" href="">
-            <div class="contact-element-icon">
-              <img src="./images/svg-files/facebook.svg" alt="facebook">
-            </div>
+            <img class="contact-element-icon" src="./images/svg-files/facebook.svg" alt="facebook">
             <span class="contact-element-text">/ &nbsp;awesome</span>
           </a>
         </li>
         <li class="contact-element">
           <a class="contact-element-link" href="">
-            <div class="contact-element-icon">
-              <img src="./images/svg-files/twitter.svg" alt="twitter">
-            </div>
+            <img class="contact-element-icon" src="./images/svg-files/twitter.svg" alt="twitter">
             <span class="contact-element-text">/ &nbsp;awesome</span>
           </a>
         </li>
         <li class="contact-element">
           <a class="contact-element-link" href="">
-            <div class="contact-element-icon-google" >
-              <img src="./images/svg-files/google-plus.svg" alt="google+">
-            </div>
+            <img class="contact-element-icon-google" src="./images/svg-files/google-plus.svg" alt="google+">
             <span class="contact-element-text">/ &nbsp;awesome</span>
           </a>
         </li>
