added proper href tags

--- a/index.html
+++ b/index.html
@@ -67,19 +67,19 @@
 
       <ul class="contact-list">
         <li class="contact-element">
-          <a class="contact-element-link" href="">
+          <a class="contact-element-link" href="#">
             <img class="contact-element-icon" src="./images/svg-files/facebook.svg" alt="facebook">
             <span class="contact-element-text">/ &nbsp;awesome</span>
           </a>
         </li>
         <li class="contact-element">
-          <a class="contact-element-link" href="">
+          <a class="contact-element-link" href="#">
             <img class="contact-element-icon" src="./images/svg-files/twitter.svg" alt="twitter">
             <span class="contact-element-text">/ &nbsp;awesome</span>
           </a>
         </li>
         <li class="contact-element">
-          <a class="contact-element-link" href="">
+          <a class="contact-element-link" href="#">
             <img class="contact-element-icon-google" src="./images/svg-files/google-plus.svg" alt="google+">
             <span class="contact-element-text">/ &nbsp;awesome</span>
           </a>
@@ -89,7 +89,7 @@
 
     <!-- bottom Arrow-->
 
-    <a class="bottom-nav-link" href ="">
+    <a class="bottom-nav-link" href ="#">
       <span class="bottom-nav-link-text">more</span>
       <span class="bottom-nav-link-text-2">+</span>
     </a>
