final changes in project

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <html>
 <head>
+  <meta charset="UTF-8">
   <title>DaftCode-recruitment-task</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Raleway:200,600" rel="stylesheet">
@@ -17,36 +18,36 @@
     <header class="main-header">
       <h1 class = "header">
         <a href="#">
-          <img class = "main-logo" src="./images/svg-files/logo_awesome.svg" alt="logo-awesome">
+          <img class = "main-logo" src="./images/svg-files/logo_awesome.svg" alt="Awesome">
         </a>
       </h1>
 
       <!--Main-nav-->
 
       <nav class="main-nav">
-        <button class="burger-button" aria-haspopup="true" aria-expanded="false">
-          <img class="burger-img" src="./images/svg-files/hamburger_menu.svg" alt="menu-burger">
-          <img class="x-img" src="./images/svg-files/iks.svg" alt="x-button">
+        <button class="burger-button" aria-expanded="false">
+          <img class="burger-img" src="./images/svg-files/hamburger_menu.svg" alt="hidden-menu">
+          <img class="x-img" src="./images/svg-files/iks.svg" alt="shown-menu">
         </button>
         <ul class="nav-list">
           <li class="nav-element"><a class="nav-link" href="#">features</a></li>
           <li class="nav-element"><a class="nav-link" href="#">case studies</a></li>
-          <li class="nav-element"><a class="nav-link" href="#">about</a></li>
-          <li><button class="contact-button">contact</button></li>
+          <li class="nav-element addOn"><a class="nav-link" href="#">about</a></li>
+          <li class="nav-element nav-element-last"><a class="nav-link" href="#">contact</a></li>
         </ul>
         <ul class="nav-list-icons">
           <li class="nav-icon">
-            <a href="">
+            <a href="#">
               <img src="./images/svg-files/facebook.svg" alt="facebook">
             </a>
           </li>
           <li class="nav-icon">
-            <a href="">
+            <a href="#">
               <img src="./images/svg-files/twitter.svg" alt="facebook">
             </a>
           </li>
           <li class="nav-icon">
-            <a href="">
+            <a href="#">
               <img src="./images/svg-files/google-plus.svg" alt="facebook">
             </a>
           </li>
@@ -56,11 +57,11 @@
 
     <!--Main content-->
 
-    <section class="main-content">
-      <h2 class="content-main-text">
+    <main class="main-content">
+      <p class="content-main-text">
         Not to make you feel<br class="line-break">  dizzy but<br class="line-break-desktop"> the challenge is worth it. Aim high,<br> have fun, <span>be awesome.</span>
-      </h2>
-      <img class = "circle-square-image" src="./images/png-files/kolko_kwadrat.png" alt="kolko-kwadrat">
+      </p>
+      <img class = "circle-square-image" src="./images/png-files/kolko_kwadrat.png" alt="">
       <p class="content-main-sub-text">Look carefully and notice every detail,<br class="line-break"> nothing tricky though.</p>
 
       <!--icons links-->
@@ -85,7 +86,7 @@
           </a>
         </li>
       </ul>
-    </section>
+    </main>
 
     <!-- bottom Arrow-->
 
