quick fix in contact nav element

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <li class="nav-element"><a class="nav-link" href="#">features</a></li>
           <li class="nav-element"><a class="nav-link" href="#">case studies</a></li>
           <li class="nav-element addOn"><a class="nav-link" href="#">about</a></li>
-          <li class="nav-element nav-element-last"><a class="nav-link" href="#">contact</a></li>
+          <li class="nav-element nav-element-last"><a class="nav-link nav-link-last" href="#">contact</a></li>
         </ul>
         <ul class="nav-list-icons">
           <li class="nav-icon">
